force-app/main/default/objects/lwc_Fields__c/lwc_Fields__c.object-meta.xml
<CustomObject>
    <label>Fields</label>
    <nameField>
        <label>Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>