force-app/main/default/objects/lwc_Fields__c/fields/lwc_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>lwc_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>