force-app/main/default/objects/lwc_Fields__c/fields/lwc_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>lwc_Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>