force-app/main/default/objects/lwc_Fields__c/fields/lwc_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>lwc_Object_Label__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>