force-app/main/default/objects/lwc_Fields__c/fields/Request_Path__c.field-meta.xml
<CustomField>
    <fullName>Request_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Path</label>
    <referenceTo>LWC_Request_Path__c</referenceTo>
    <relationshipLabel>Fields</relationshipLabel>
    <relationshipName>Fields</relationshipName>
    <type>Lookup</type>
</CustomField>